bump dependencies, bump java to 16